[workspace]
resolver = "2"
members = [
    "ydb",
    "ydb-grpc",
    #    "ydb-grpc-helpers",
    "ydb-example-urlshortener",
    "ydb-slo-tests",
]

[workspace.dependencies]
prost = "0.11.2"
prost-types = "0.11.2"
# Version of prost-build should match version of prost, that's why they both are here.
prost-build = "0.11.2"

pbjson = "0.5.1"
pbjson-types = "0.5.1"
# Version of pbjson-build should match version of pbjson, that's why they both are here.
pbjson-build = "0.5.1"

serde = { version = "1.0", features = ["derive"] }
tonic = { version = "0.8.2", features = [ "tls" ] }