[package]
publish = true
name = "ydb-grpc"
version = "0.1.0"
authors = ["rekby <timofey.koolin@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Crate contains generated low-level grpc code from YDB API protobuf, used as base for ydb crate"
repository = "https://github.com/ydb-platform/ydb-rs-sdk/tree/master/ydb-grpc"
rust-version = "1.68.0"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
pbjson = { workspace = true }
pbjson-types = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true, features = [ "tls-roots", "tls-webpki-roots" ] }

[build-dependencies]
prost-build = { workspace = true }
pbjson-build = { workspace = true }
tonic-build = "0.8.0"
walkdir = "2"

[features]
regenerate-sources = []
